# python_flask_boilerplate

./: .env.example  .gitignore  AGENTS.md  README.md  delete_this.yaml  docker-compose.yaml  dockerfile  mypy.ini  pylintrc  pyproject.toml  tox.ini  versions.json
.circleci/: config.yml
.github/workflows/: bytebase-sql-review.yml
.trunk/: trunk.yaml
0.1/: 404.html  index.html
0.2/: 404.html  index.html
0.3/: 404.html  index.html
0.3/search/: search_index.json
0.3/stylesheets/: extra.css
0.4/: 404.html  index.html
0.4/search/: search_index.json
0.4/stylesheets/: extra.css
0.5/: index.html
bytebase/dev/: boilerplate_dev##202310191000##ddl##create_messages_worlds.sql  boilerplate_dev##8a1c72f3bd0a##ddl##create_messages_worlds.sql  boilerplate_dev##8a1c72f3bd0a##dml##update_alembic_vers.sql  boilerplate_dev##8a1c72f3bd0a1##dml##update_alembic_vers.sql  boilerplate_dev##8a1c72f3bd0a2##ddl##create_messages_worlds.sql
coverage/: .coverage  .coveragerc
dev/: .p10k.zsh  .zshrc  .zshrc-ssh  dockerfile
manifests/: 001_serviceaccount.yaml  00_namespace.yaml  01_cert_staging.yaml  02_cert_prod.yaml  03_ingress_gateway.yaml  04_virtual_service.yaml  05_service.yaml  06_deployment.yaml  07_statuspage_rules.yaml
mkdocs/: mkdocs.yml
mkdocs/docs/: index.md
my_app/: app.py
my_app/data/: app.db
my_app/flask_app/: __init__.py  config.py  database.py  models.py  routes.py  serializers.py
my_app/migrations_dev/versions/: cab09b995e1a_.py
my_app/migrations_prod/versions/: 8a1c72f3bd0a_.py
my_app/tests/: __init__.py  conftest.py  test_routes.py
