[tool.poetry]
name = "my_app"
version = "0.4.2"
description = "This is a boilerplate application with Flask and SQLAlchemy"
authors = ["CoffeeAnon <dan@danjacobsen.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0"
flask-sqlalchemy = "^3.0"
python-dotenv = "^1.0"
flask-migrate = "^4.0"
gunicorn = "^21.2"
flask-restx = "^1.1"
psycopg2-binary = "^2.9"
toml = "^0.10"

pytest = { version = "^7.4", extras = ["type_tests"] }
mypy = { version = "^1.5", extras = ["type_tests"] }
types-requests = { version = "^2.28", extras = ["type_tests"] }
types-flask-migrate = { version = "^4.0", extras = ["type_tests"] }
types-toml = { version = "^0.10", extras = ["type_tests"] }
types-SQLAlchemy = { version = "^1.4", extras = ["type_tests"] }
coverage = { version = "^7.3.1", extras = ["type_tests"] }
pylint = { version = "^2.17", extras = ["type_tests"] }

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6"
flake8 = "^6.1"
black = "^24.0"
types-requests = "^2.28"
types-flask-migrate = "^4.0"
types-toml = "^0.10"
types-SQLAlchemy = "^1.4"
mkdocs-material = "^9.5.15"
mike = "^2.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
