[tool.poetry]
name = "my_app"
version = "0.4.2"
description = "This is a boilerplate application with Flask and SQLAlchemy"
authors = ["CoffeeAnon <dan@danjacobsen.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0"
flask-sqlalchemy = "^3.0"
python-dotenv = "^1.0"
flask-migrate = "^4.0"
gunicorn = "^22.0"
flask-restx = "^1.1"
psycopg2-binary = "^2.9"
toml = "^0.10"

pytest = { version = "^8.2", extras = ["type_tests"] }
mypy = { version = "^1.5", extras = ["type_tests"] }
types-requests = { version = "^2.31", extras = ["type_tests"] }
types-flask-migrate = { version = "^4.0", extras = ["type_tests"] }
types-toml = { version = "^0.10", extras = ["type_tests"] }
types-SQLAlchemy = { version = "^1.4", extras = ["type_tests"] }
coverage = { version = "^7.5.1", extras = ["type_tests"] }
pylint = { version = "^3.1", extras = ["type_tests"] }

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6"
flake8 = "^7.0"
black = "^24.4"
types-requests = "^2.31"
types-flask-migrate = "^4.0"
types-toml = "^0.10"
types-SQLAlchemy = "^1.4"
mkdocs-material = "^9.5.19"
mike = "^2.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
